traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:9: error: ';' expected but ')' found.
    if (posY/2)!=prec) {
                     ^